lib/parser.js
/* Do not edit the parser directly. This is a generated file created using a build script and the PEG grammar. */
(function(root, factory) {
  if (typeof exports === 'object') {
    // in Node, require this file if we want to use the parser as a standalone module
    module.exports = factory(require('./dust'));
    // @see server file for parser methods exposed in node
  } else {
    // in the browser, store the factory output if we want to use the parser directly
    factory(root.dust);
  }
}(this, function(dust) {
  var parser = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = function(p) {
            return ["body"]
                   .concat(p)
                   .concat([['line', line()], ['col', column()]]);
          },
        peg$c2 = { type: "other", description: "raw_section" },
        peg$c3 = peg$FAILED,
        peg$c4 = function(all) {return all},
        peg$c5 = null,
        peg$c6 = function(t, b, d, e, n) {
            return true
          },
        peg$c7 = void 0,
        peg$c8 = function(t, b, d, e, n) {
            if (t[1].text === "hl") {
                e.push(["param", ["literal", "block"], ['body', ['buffer', b.join(''), [['line', line()], ['col', column()]]]]]);
                t.push(e);
                return t.concat([['line', line()], ['col', column()]]);
            }
          },
        peg$c9 = { type: "other", description: "section" },
        peg$c10 = function(t, b, e, n) {
            if( (!n) || (t[1].text !== n.text) ) {
              error("Expected end tag for "+t[1].text+" but it was not found.");
            }
            return true;
          },
        peg$c11 = function(t, b, e, n) {
            e.push(["param", ["literal", "block"], b]);
            t.push(e);
            return t.concat([['line', line()], ['col', column()]]);
          },
        peg$c12 = "/",
        peg$c13 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c14 = function(t) {
            t.push(["bodies"]);
            return t.concat([['line', line()], ['col', column()]]);
          },
        peg$c15 = /^[#?\^<+@%]/,
        peg$c16 = { type: "class", value: "[#?\\^<+@%]", description: "[#?\\^<+@%]" },
        peg$c17 = function(t, n, c, p) { return [t, n, c, p] },
        peg$c18 = /^[@]/,
        peg$c19 = { type: "class", value: "[@]", description: "[@]" },
        peg$c20 = function(t, name, c, p) {
                var namearr = ['key', name];
                namearr.text = name;
                return [t, namearr, c, p]
            },
        peg$c21 = "hl",
        peg$c22 = { type: "literal", value: "hl", description: "\"hl\"" },
        peg$c23 = "highlight",
        peg$c24 = { type: "literal", value: "highlight", description: "\"highlight\"" },
        peg$c25 = { type: "other", description: "end tag" },
        peg$c26 = function(n) { return n },
        peg$c27 = ":",
        peg$c28 = { type: "literal", value: ":", description: "\":\"" },
        peg$c29 = function(n) {return n},
        peg$c30 = function(n) { return n ? ["context", n] : ["context"] },
        peg$c31 = { type: "other", description: "params" },
        peg$c32 = "=",
        peg$c33 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c34 = function(k, v) {return ["param", ["literal", k], v]},
        peg$c35 = function(p) { return ["params"].concat(p) },
        peg$c36 = { type: "other", description: "bodies" },
        peg$c37 = function(p) { return ["bodies"].concat(p) },
        peg$c38 = { type: "other", description: "reference" },
        peg$c39 = function(n, f) { return ["reference", n, f].concat([['line', line()], ['col', column()]]) },
        peg$c40 = { type: "other", description: "partial" },
        peg$c41 = ">",
        peg$c42 = { type: "literal", value: ">", description: "\">\"" },
        peg$c43 = "+",
        peg$c44 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c45 = function(k) {return ["literal", k]},
        peg$c46 = function(s, n, c, p) {
            var key = (s === ">") ? "partial" : s;
            return [key, n, c, p].concat([['line', line()], ['col', column()]]);
          },
        peg$c47 = { type: "other", description: "filters" },
        peg$c48 = "|",
        peg$c49 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c50 = function(f) { return ["filters"].concat(f) },
        peg$c51 = { type: "other", description: "special" },
        peg$c52 = "~",
        peg$c53 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c54 = function(k) { return ["special", k].concat([['line', line()], ['col', column()]]) },
        peg$c55 = { type: "other", description: "identifier" },
        peg$c56 = function(p) { var arr = ["path"].concat(p); arr.text = p[1].join('.'); return arr; },
        peg$c57 = function(k) { var arr = ["key", k]; arr.text = k; return arr; },
        peg$c58 = { type: "other", description: "number" },
        peg$c59 = function(n) { return ['literal', n]; },
        peg$c60 = { type: "other", description: "float" },
        peg$c61 = ".",
        peg$c62 = { type: "literal", value: ".", description: "\".\"" },
        peg$c63 = function(l, r) { return parseFloat(l + "." + r.join('')); },
        peg$c64 = { type: "other", description: "integer" },
        peg$c65 = /^[0-9]/,
        peg$c66 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c67 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c68 = { type: "other", description: "path" },
        peg$c69 = function(k, d) {
            d = d[0];
            if (k && d) {
              d.unshift(k);
              return [false, d].concat([['line', line()], ['col', column()]]);
            }
            return [true, d].concat([['line', line()], ['col', column()]]);
          },
        peg$c70 = function(d) {
            if (d.length > 0) {
              return [true, d[0]].concat([['line', line()], ['col', column()]]);
            }
            return [true, []].concat([['line', line()], ['col', column()]]);
          },
        peg$c71 = { type: "other", description: "key" },
        peg$c72 = /^[a-zA-Z_$]/,
        peg$c73 = { type: "class", value: "[a-zA-Z_$]", description: "[a-zA-Z_$]" },
        peg$c74 = /^[0-9a-zA-Z_$\-]/,
        peg$c75 = { type: "class", value: "[0-9a-zA-Z_$\\-]", description: "[0-9a-zA-Z_$\\-]" },
        peg$c76 = function(h, t) { return h + t.join('') },
        peg$c77 = { type: "other", description: "array" },
        peg$c78 = function(n) {return n.join('')},
        peg$c79 = function(a) {return a; },
        peg$c80 = function(i, nk) { if(nk) { nk.unshift(i); } else {nk = [i] } return nk; },
        peg$c81 = { type: "other", description: "array_part" },
        peg$c82 = function(k) {return k},
        peg$c83 = function(d, a) { if (a) { return d.concat(a); } else { return d; } },
        peg$c84 = { type: "other", description: "inline" },
        peg$c85 = "\"",
        peg$c86 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c87 = function() { return ["literal", ""].concat([['line', line()], ['col', column()]]) },
        peg$c88 = function(l) { return ["literal", l].concat([['line', line()], ['col', column()]]) },
        peg$c89 = function(p) { return ["body"].concat(p).concat([['line', line()], ['col', column()]]) },
        peg$c90 = function(l) { return ["buffer", l] },
        peg$c91 = { type: "other", description: "buffer" },
        peg$c92 = function(e, w) { return ["buffer", e + w.join('')].concat([['line', line()], ['col', column()]]) },
        peg$c93 = { type: "any", description: "any character" },
        peg$c94 = function(c) {return c},
        peg$c95 = function(b) { return ["buffer", b.join('')].concat([['line', line()], ['col', column()]]) },
        peg$c96 = { type: "other", description: "rawbuffer" },
        peg$c97 = function(e, w) { return e + w.join('') },
        peg$c98 = function(b) { return  b.join('') },
        peg$c99 = { type: "other", description: "literal" },
        peg$c100 = /^[^"]/,
        peg$c101 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c102 = function(b) { return b.join('') },
        peg$c103 = "\\\"",
        peg$c104 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c105 = function() { return '"' },
        peg$c106 = function(char) {return char},
        peg$c107 = { type: "other", description: "raw" },
        peg$c108 = "{`",
        peg$c109 = { type: "literal", value: "{`", description: "\"{`\"" },
        peg$c110 = "`}",
        peg$c111 = { type: "literal", value: "`}", description: "\"`}\"" },
        peg$c112 = function(rawText) { return ["raw", rawText.join('')].concat([['line', line()], ['col', column()]]) },
        peg$c113 = { type: "other", description: "comment" },
        peg$c114 = "{!",
        peg$c115 = { type: "literal", value: "{!", description: "\"{!\"" },
        peg$c116 = "!}",
        peg$c117 = { type: "literal", value: "!}", description: "\"!}\"" },
        peg$c118 = function(c) { return ["comment", c.join('')].concat([['line', line()], ['col', column()]]) },
        peg$c119 = /^[#?\^><+%:@\/~%]/,
        peg$c120 = { type: "class", value: "[#?\\^><+%:@\\/~%]", description: "[#?\\^><+%:@\\/~%]" },
        peg$c121 = "{",
        peg$c122 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c123 = "}",
        peg$c124 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c125 = "[",
        peg$c126 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c127 = "]",
        peg$c128 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c129 = "\n",
        peg$c130 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c131 = "\r\n",
        peg$c132 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c133 = "\r",
        peg$c134 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c135 = "\u2028",
        peg$c136 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c137 = "\u2029",
        peg$c138 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c139 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c140 = { type: "class", value: "[\\t\\x0B\\f \\xA0\\uFEFF]", description: "[\\t\\x0B\\f \\xA0\\uFEFF]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsebody();

      return s0;
    }

    function peg$parsebody() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsepart();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsepart();
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsepart() {
      var s0;

      s0 = peg$parseraw();
      if (s0 === peg$FAILED) {
        s0 = peg$parsecomment();
        if (s0 === peg$FAILED) {
          s0 = peg$parseraw_section();
          if (s0 === peg$FAILED) {
            s0 = peg$parsesection();
            if (s0 === peg$FAILED) {
              s0 = peg$parsepartial();
              if (s0 === peg$FAILED) {
                s0 = peg$parsespecial();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsereference();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parsebuffer();
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseraw_section() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseraw_start();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsews();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parserd();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$currPos;
            s6 = peg$parserawbuffer();
            if (s6 !== peg$FAILED) {
              peg$reportedPos = s5;
              s6 = peg$c4(s6);
            }
            s5 = s6;
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$currPos;
              s6 = peg$parserawbuffer();
              if (s6 !== peg$FAILED) {
                peg$reportedPos = s5;
                s6 = peg$c4(s6);
              }
              s5 = s6;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsebody();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsebodies();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseend_tag();
                  if (s7 === peg$FAILED) {
                    s7 = peg$c5;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = peg$currPos;
                    s8 = peg$c6(s1, s4, s5, s6, s7);
                    if (s8) {
                      s8 = peg$c7;
                    } else {
                      s8 = peg$c3;
                    }
                    if (s8 !== peg$FAILED) {
                      peg$reportedPos = s0;
                      s1 = peg$c8(s1, s4, s5, s6, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c3;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c3;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c3;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c3;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }

      return s0;
    }

    function peg$parsesection() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsesec_tag_start();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsews();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parserd();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsebody();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsebodies();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseend_tag();
                if (s6 === peg$FAILED) {
                  s6 = peg$c5;
                }
                if (s6 !== peg$FAILED) {
                  peg$reportedPos = peg$currPos;
                  s7 = peg$c10(s1, s4, s5, s6);
                  if (s7) {
                    s7 = peg$c7;
                  } else {
                    s7 = peg$c3;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c11(s1, s4, s5, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c3;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c3;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c3;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsesec_tag_start();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parsews();
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
          if (s2 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 47) {
              s3 = peg$c12;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c13); }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parserd();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c14(s1);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c3;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }

      return s0;
    }

    function peg$parsesec_tag_start() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseld();
      if (s1 !== peg$FAILED) {
        if (peg$c15.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c16); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsews();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsews();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseidentifier();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsecontext();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseparams();
                if (s6 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c17(s2, s4, s5, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c3;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c3;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }

      return s0;
    }

    function peg$parseraw_start() {
      var s0, s1, s2, s3, s4, s5, s6;
